@@ -22,6 +22,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 
 import org.eclipse.sirius.components.collaborative.api.IEditingContextEventProcessor;
@@ -88,6 +89,33 @@ public class FormControllerIntegrationTests extends AbstractIntegrationTests {
         this.editingContextEventProcessorRegistry.getEditingContextEventProcessors().stream()
                 .map(IEditingContextEventProcessor::getEditingContextId)
                 .forEach(this.editingContextEventProcessorRegistry::disposeEditingContextEventProcessor);
+    }
+
+    @Test
+    @DisplayName("Given a semantic object, when we subscribe to a form representation, then the form is sent")
+    @Sql(scripts = {"/scripts/initialize.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
+    @Sql(scripts = {"/scripts/cleanup.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD, config = @SqlConfig(transactionMode = SqlConfig.TransactionMode.ISOLATED))
+    public void givenSemanticObjectWhenSubscribeToFormRepresentationThenFormIsSent() {
+        this.commitInitializeStateBeforeThreadSwitching();
+
+        var input = new FormEventInput(UUID.randomUUID(), TestIdentifiers.SAMPLE_STUDIO_INSTANCE_PROJECT.toString(), TestIdentifiers.HUMAN_FORM_REPRESENTATION.toString());
+        var flux = this.formEventSubscriptionRunner.run(input);
+
+        Consumer<Object> formContentConsumer = object -> Optional.of(object)
+                .filter(DataFetcherResult.class::isInstance)
+                .map(DataFetcherResult.class::cast)
+                .map(DataFetcherResult::getData)
+                .filter(FormRefreshedEventPayload.class::isInstance)
+                .map(FormRefreshedEventPayload.class::cast)
+                .map(FormRefreshedEventPayload::form)
+                .ifPresent(form -> {
+                    assertThat(form.getLabel()).isEqualTo("Human Form");
+                });
+
+        StepVerifier.create(flux)
+                .consumeNextWith(formContentConsumer)
+                .thenCancel()
+                .verify(Duration.ofSeconds(5));
     }
 
     @Test
